# annplyr

./: .codecov.yaml  .cruft.json  .gitignore  .pre-commit-config.yaml  .prekignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  biome.jsonc  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yaml  release.yaml  test.yaml  typecheck.yaml
docs/: api.md  changelog.md  conf.py  contributing.md  index.md  installation.md  quickstart.md  roadmap.md  template_usage.md  tutorials.md
docs/development/: skills.md
docs/extensions/: typed_returns.py
docs/notebooks/: all_of_annplyr.ipynb  getting_started.ipynb  plot_ready_tables.ipynb
docs/user_guide/: concepts.md  grouping.md  joins.md  scverse_safety.md  tidy_tables.md  utilities.md  verbs.md
src/annplyr/: __init__.py  _accessor.py  _errors.py  _expr.py  _extensions.py  _frames.py  _grouped.py  _utils.py  _verbs.py
src/annplyr/_skills/: __init__.py  install.py
src/annplyr/_skills/data/: SKILL.md
src/annplyr/_skills/data/agents/: openai.yaml
src/annplyr/_skills/data/references/: api-patterns.md  quickstart.md  safety.md
tests/: conftest.py  test_accessor_verbs.py  test_errors.py  test_grouped_semantics.py  test_joins_tidyr_scverse.py  test_sc_utilities.py  test_scverse_hardening.py  test_selectors_and_core_verbs.py  test_skills.py  test_tidyverse_parity.py
