[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "annplyr"
version = "0.2.0"
description = "Tidy, dataframe-style wrangling for AnnData."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "annplyr developers" },
]
authors = [
  { name = "annplyr developers" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata>=0.12",
  "narwhals[pandas]>=2.14",
  "numpy",
  "pandas",
  "scipy",
  "session-info2",
]
urls.Documentation = "https://mdmanurung.github.io/annplyr/"
urls.Homepage = "https://github.com/mdmanurung/annplyr"
urls.Source = "https://github.com/mdmanurung/annplyr"

[project.scripts]
annplyr-install-skills = "annplyr._skills.install:main"

[tool.hatch.build.targets.wheel]
packages = ["src/annplyr"]

[dependency-groups]
dev = [
  "pre-commit",
  "prek",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",
  "pytest-xdist>=3.6.1",
]
type = [
  "mypy>=1.13",
  "pandas-stubs",
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]

[tool.hatch.envs.docs]
dependency-groups = ["doc"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs docs/_build -W {args}"
clean = "git clean -fdX -- {args:docs}"
open = "python -m webbrowser -t docs/_build/html/index.html"

[tool.hatch.envs.hatch-test]
dependency-groups = ["dev", "test"]

[[tool.hatch.envs.hatch-test.matrix]]
deps = ["stable"]
python = ["3.12", "3.13", "3.14"]

[[tool.hatch.envs.hatch-test.matrix]]
deps = ["pre"]
python = ["3.14"]

[[tool.hatch.envs.hatch-test.overrides.matrix.deps.env-vars]]
if = ["pre"]
key = "UV_PRERELEASE"
value = "allow"

[tool.hatch.envs.hatch-test.scripts]
cov-combine = "coverage combine"
cov-report = "coverage report"
run = "pytest {args}"
run-cov = "coverage run -m pytest {args}"

[tool.hatch.envs.type]
dependency-groups = ["type"]

[tool.hatch.envs.type.scripts]
check = "mypy src/annplyr {args}"

[tool.ruff]
line-length = 120
src = ["src"]
extend-include = ["*.ipynb"]
format.docstring-code-format = true
lint.select = [
  "B",
  "BLE",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "RUF100",
  "TID",
  "UP",
  "W",
]
lint.ignore = [
  "B008",
  "D100",
  "D104",
  "D105",
  "D107",
  "D203",
  "D213",
  "D400",
  "D401",
  "E501",
  "E731",
  "E741",
]
lint.per-file-ignores."*/__init__.py" = ["F401"]
lint.per-file-ignores."docs/*" = ["I"]
lint.per-file-ignores."tests/*" = ["D"]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
xfail_strict = true

[tool.coverage.run]
branch = true
omit = ["**/test_*.py"]
patch = ["subprocess"]
source = ["annplyr"]

[tool.coverage.report]
exclude_also = ["@(abc\\.)?abstractmethod", "raise NotImplementedError"]
show_missing = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.cruft]
skip = [
  ".git",
  "src/**/__init__.py",
  "tests",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
