[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "annplyr"
version = "0.2.0"
description = "Tidy, dataframe-style wrangling for AnnData."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "annplyr developers" },
]
authors = [
  { name = "annplyr developers" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata>=0.12",
  "narwhals[pandas]>=2.14",
  "numpy",
  "pandas",
  "scipy",
  "session-info2",
]
urls.Documentation = "https://mdmanurung.github.io/annplyr/"
urls.Homepage = "https://github.com/mdmanurung/annplyr"
urls.Source = "https://github.com/mdmanurung/annplyr"
scripts.annplyr-install-skills = "annplyr._skills.install:main"

[dependency-groups]
dev = [
  "pre-commit",
  "prek",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",
  "pytest-xdist>=3.6.1",
]
type = [
  "mypy>=1.13",
  "pandas-stubs",
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/annplyr" ]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.dependency-groups = [ "doc" ]
envs.hatch-test.scripts.cov-combine = "coverage combine"
envs.hatch-test.scripts.cov-report = "coverage report"
envs.hatch-test.scripts.run = "pytest {args}"
envs.hatch-test.scripts.run-cov = "coverage run -m pytest {args}"
envs.hatch-test.matrix = [
  { deps = [ "stable" ], python = [ "3.12", "3.13", "3.14" ] },
  { deps = [ "pre" ], python = [ "3.14" ] }
]
envs.hatch-test.overrides.matrix.deps.env-vars = [ { value = "allow", if = [ "pre" ], key = "UV_PRERELEASE" } ]
envs.hatch-test.dependency-groups = [ "dev", "test" ]
envs.type.scripts.check = "mypy src/annplyr {args}"
envs.type.dependency-groups = [ "type" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",
  "BLE",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "RUF100",
  "TID",
  "UP",
  "W",
]
lint.ignore = [
  "B008",
  "D100",
  "D104",
  "D105",
  "D107",
  "D203",
  "D213",
  "D400",
  "D401",
  "E501",
  "E731",
  "E741",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "src" ]
ini_options.addopts = [ "--import-mode=importlib" ]
ini_options.xfail_strict = true

[tool.coverage]
run.branch = true
run.omit = [ "**/test_*.py" ]
run.patch = [ "subprocess" ]
run.source = [ "annplyr" ]
report.exclude_also = [ "@(abc\\.)?abstractmethod", "raise NotImplementedError" ]
report.show_missing = true

[tool.cruft]
skip = [
  ".git",
  "src/**/__init__.py",
  "tests",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
